--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,12 +44,33 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    def app_compat_version = '1.2.0'
+    implementation "androidx.appcompat:appcompat:$app_compat_version"
 
+    def card_view_version = '1.0.0'
+    implementation "androidx.cardview:cardview:$card_view_version"
 
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    def constraint_layout_version = '2.0.4'
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
+
+    def core_ktx_version = '1.3.2'
+    implementation "androidx.core:core-ktx:$core_ktx_version"
+
+    def espresso_version = '3.3.0'
+    androidTestImplementation "ndroidx.test.espresso:espresso-core:$espresso_version"
+
+    def junit_version = '4.13.1'
+    testImplementation "junit:junit:$junit_version"
+
+    def junit_android_version = '1.1.2'
+    androidTestImplementation "androidx.test.ext:junit:$junit_android_version"
+
+    def material_version = '1.2.1'
+    implementation "com.google.android.material:material:$material_version"
+
+    def nav_version = "2.3.2"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 }
