--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ android {
 }
 
 dependencies {
+    implementation project(':core')
+    implementation project(':shared')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
