Force application screen orientation to portrait

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WarOfSuits">
 
-        <activity android:name=".application.view.ApplicationActivity">
+        <activity
+            android:name=".application.view.ApplicationActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
