--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
 
 dependencies {
     implementation project(':core')
+
     implementation project(':shared')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -59,14 +60,17 @@ dependencies {
     def core_ktx_version = '1.3.2'
     implementation "androidx.core:core-ktx:$core_ktx_version"
 
+    def core_ktx_test_version = '1.3.0'
+    androidTestImplementation "androidx.test:core-ktx:$core_ktx_test_version"
+
     def espresso_version = '3.3.0'
-    androidTestImplementation "ndroidx.test.espresso:espresso-core:$espresso_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 
     def junit_version = '4.13.1'
     testImplementation "junit:junit:$junit_version"
 
-    def junit_android_version = '1.1.2'
-    androidTestImplementation "androidx.test.ext:junit:$junit_android_version"
+    def junit_android_ktx_version = '1.1.2'
+    androidTestImplementation "androidx.test.ext:junit-ktx:$junit_android_ktx_version"
 
     def material_version = '1.2.1'
     implementation "com.google.android.material:material:$material_version"
