--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,11 @@ dependencies {
     def app_compat_version = '1.2.0'
     implementation "androidx.appcompat:appcompat:$app_compat_version"
 
+    def barista_version = '3.7.0'
+    androidTestImplementation("com.schibsted.spain:barista:$barista_version") {
+        exclude group: 'org.jetbrains.kotlin' // Only if you already use Kotlin in your project
+    }
+
     def card_view_version = '1.0.0'
     implementation "androidx.cardview:cardview:$card_view_version"
 
@@ -65,6 +70,11 @@ dependencies {
 
     def espresso_version = '3.3.0'
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+
+    def fragment_version = "1.2.5"
+    debugImplementation("androidx.fragment:fragment-testing:$fragment_version") {
+        exclude group: 'androidx.test', module: 'monitor'
+    }
 
     def junit_version = '4.13.1'
     testImplementation "junit:junit:$junit_version"
