--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,13 +71,11 @@ dependencies {
     def core_ktx_test_version = '1.3.0'
     androidTestImplementation "androidx.test:core-ktx:$core_ktx_test_version"
 
-    def espresso_version = '3.3.0'
+    def espresso_version = '3.2.0'
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 
     def fragment_version = "1.2.5"
-    debugImplementation("androidx.fragment:fragment-testing:$fragment_version") {
-        exclude group: 'androidx.test', module: 'monitor'
-    }
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
 
     def junit_version = '4.13.1'
     testImplementation "junit:junit:$junit_version"
