--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         versionName "1.0"
 
         vectorDrawables.useSupportLibrary = true
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "alexta.interviews.wallapop.wos.WarOfSuitsTestRunner"
     }
 
     buildFeatures {
@@ -33,6 +33,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    hilt {
+        enableTransformForLocalTests = true
+    }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -40,13 +44,15 @@ android {
 
 dependencies {
     implementation project(':core')
-
     implementation project(':shared')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
+    androidTestAnnotationProcessor "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     def app_compat_version = '1.2.0'
     implementation "androidx.appcompat:appcompat:$app_compat_version"
