--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -3,6 +3,37 @@ apply plugin: 'kotlin'
 sourceCompatibility = JavaVersion.VERSION_1_8.toString()
 targetCompatibility = JavaVersion.VERSION_1_8.toString()
 
+task jarTest (type: Jar) {
+    from sourceSets.test.output
+    classifier = 'test'
+}
+
+configurations {
+    testOutput
+    sharedTestDependencies.extendsFrom testImplementation
+}
+
+artifacts {
+    testOutput jarTest
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    def assertj_version = '3.13.2'
+    testImplementation "org.assertj:assertj-core:$assertj_version"
+
+    def coroutines_version = '1.3.9'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
+
+    def faker_version = '1.0.2'
+    testImplementation "com.github.javafaker:javafaker:$faker_version"
+
+    def junit_version = '5.5.2'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_version"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:$junit_version"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit_version"
+
+    def mockk_version = '1.9.3'
+    testImplementation "io.mockk:mockk:$mockk_version"
 }
