--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,9 @@ dependencies {
     def material_version = '1.2.1'
     implementation "com.google.android.material:material:$material_version"
 
+    def mockito_version = '3.7.7'
+    androidTestImplementation "org.mockito:mockito-android:$mockito_version"
+
     def nav_version = "2.3.2"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
