--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,6 +3,19 @@ apply plugin: 'kotlin'
 sourceCompatibility = JavaVersion.VERSION_1_8.toString()
 targetCompatibility = JavaVersion.VERSION_1_8.toString()
 
+task jarTest(type: Jar) {
+    from sourceSets.test.output
+    classifier = 'test'
+}
+
+configurations {
+    testOutput
+}
+
+artifacts {
+    testOutput jarTest
+}
+
 dependencies {
     implementation project(':shared')
 
