--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
 
+        multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "alexta.interviews.wallapop.wos.WarOfSuitsTestRunner"
     }
@@ -101,6 +102,9 @@ dependencies {
 
     def mockito_version = '3.7.7'
     androidTestImplementation "org.mockito:mockito-android:$mockito_version"
+
+    def multidex_version = '2.0.1'
+    implementation "androidx.multidex:multidex:$multidex_version"
 
     def nav_version = "2.3.2"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
