--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,9 @@ dependencies {
     def multidex_version = '2.0.1'
     implementation "androidx.multidex:multidex:$multidex_version"
 
+    def recycler_version = '1.1.0'
+    implementation "androidx.recyclerview:recyclerview:$recycler_version"
+
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
